Verandert projectnaam naar 'winepairer' en kopieert de class App (met aanpassingen) vanuit mancala api laag

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,5 @@
  * in the user manual at https://docs.gradle.org/6.8.3/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'jvester_wine_pairer'
+rootProject.name = 'winepairer'
 include('app', 'api', 'domain')
