--- a/api/build.gradle
+++ b/api/build.gradle
@@ -44,7 +44,8 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
-
+    
+    // This dependency is used by the library built in the domain layer
     implementation('nl.siegmann.epublib:epublib-core:3.1') {
         exclude group: 'org.slf4j'
         exclude group: 'xmlpull'
