--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "@web/test-runner": "^0.12.0",
     "chai": "^4.2.0",
     "http-proxy": "^1.18.1",
-    "prettier": "^2.0.5",
+    "prettier": "2.2.1",
     "snowpack": "^3.0.1",
     "typescript": "^4.0.0"
   }
