Wijn, voedsel en combinatie objecten worden ingelezen en aangemaakt

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ client/README.md
 
 # Ignore resource files
 winedine_contents
+
+# Ignore Regex tryout class
+RegexLearner.java
+RegexLearner.class
