--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     implementation 'nl.siegmann.epublib:epublib-core:3.1'
     implementation 'mysql:mysql-connector-java:8.0.23'
+    implementation 'org.apache.commons:commons-text:1.9'
     // Download JUnit so that we can use it in our tests.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
